<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmants.Fragment_Pausados" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/selecciona_empleado"
        android:textColor="@color/titulos"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/selecciona_proyecto"
        android:textColor="@color/titulos"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/id_spEmpleados"
        app:layout_constraintTop_toBottomOf="@+id/id_spEmpleados" />

    <Spinner
        android:id="@+id/id_spEmpleados"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Spinner
        android:id="@+id/id_spProyecto"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/id_spEmpleado"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/efecto_boton"
        android:src="@drawable/skip_forward"
        app:layout_constraintBottom_toBottomOf="@+id/id_spEmpleados"
        app:layout_constraintStart_toEndOf="@+id/id_spEmpleados" />

    <ImageButton
        android:id="@+id/id_btnProyectos"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/efecto_boton"
        android:src="@drawable/skip_forward"
        app:layout_constraintBottom_toBottomOf="@+id/id_spProyecto"
        app:layout_constraintStart_toEndOf="@+id/id_spProyecto" />

    <RadioGroup
        android:layout_width="229dp"
        android:layout_height="73dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/id_spProyecto"
        app:layout_constraintTop_toBottomOf="@+id/id_spProyecto">

        <RadioButton
            android:id="@+id/id_rbReanudar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:text="@string/reanudar"
            android:textColor="@color/titulos"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/id_rbTerminado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:text="@string/terminado"
            android:textColor="@color/titulos"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/id_btnGuardar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/efecto_boton"
        android:drawableStart="@drawable/content_save_settings"
        android:paddingStart="10dp"
        android:text="@string/guarda"
        android:textColor="@color/letras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id_btnCancelar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/efecto_boton"
        android:drawableStart="@drawable/close_circle"
        android:paddingStart="10dp"
        android:text="@string/cancela"
        android:textColor="@color/letras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>