<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmants.Fragment_EnCurso_tiempos">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/selecciona_empleado"
        android:textColor="@color/titulos"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/selecciona_proyecto"
        android:textColor="@color/titulos"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/id_spEmpleado"
        app:layout_constraintTop_toBottomOf="@+id/id_spEmpleado" />

    <Spinner
        android:id="@+id/id_spEmpleado"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/id_spProyecto"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/id_btnEmpleado"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/efecto_boton"
        android:src="@drawable/skip_forward"
        app:layout_constraintBottom_toBottomOf="@+id/id_spEmpleado"
        app:layout_constraintStart_toEndOf="@+id/id_spEmpleado"
        android:contentDescription="TODO" />

    <ImageButton
        android:id="@+id/id_btnProyecto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/efecto_boton"
        android:src="@drawable/skip_forward"
        app:layout_constraintBottom_toBottomOf="@+id/id_spProyecto"
        app:layout_constraintStart_toEndOf="@+id/id_spProyecto"
        android:contentDescription="TODO" />

    <RadioGroup
        android:layout_width="232dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/id_spProyecto"
        app:layout_constraintTop_toBottomOf="@+id/id_spProyecto" >

        <RadioButton
            android:id="@+id/id_rbPausado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:text="@string/puasado"
            android:textColor="@color/titulos"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/id_rbTerminado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:text="@string/terminado"
            android:textColor="@color/titulos"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/id_btnGuardar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/efecto_boton"
        android:drawableStart="@drawable/content_save_settings"
        android:paddingStart="5dp"
        android:textColor="@color/letras"
        android:text="@string/guarda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/guarda" />

    <Button
        android:id="@+id/id_btnCancelar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/efecto_boton"
        android:drawableStart="@drawable/close_circle"
        android:paddingStart="5dp"
        android:text="@string/cancela"
        android:textColor="@color/letras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>