<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Proyectos">

    <TextView
        android:id="@+id/textView"
        android:layout_width="197dp"
        android:layout_height="47dp"
        android:layout_marginTop="70dp"
        android:text="@string/alta_proyecto"
        android:textAlignment="center"
        android:textColor="@color/titulos"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_txtCodigo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/id_btnCancelar"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/efecto_boton"
        android:drawableStart="@drawable/close_circle"
        android:paddingStart="10dp"
        android:text="@string/cancela"
        android:textAlignment="center"
        android:textColor="@color/letras"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/id_btnGuardar"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/efecto_boton"
        android:drawableLeft="@drawable/content_save_settings"
        android:paddingStart="10dp"
        android:text="@string/guarda"
        android:textAlignment="center"
        android:textColor="@color/letras"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>