<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmants.tiempos_fragmentMenu">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <Button
        android:id="@+id/id_btnAlta"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/efecto_boton"
        android:drawableTop="@drawable/archive_arrow_up"
        android:paddingTop="15dp"
        android:text="@string/alta"
        android:textColor="@color/letras"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/id_btnEnCurso"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/efecto_boton"
        android:drawableTop="@drawable/tools"
        android:paddingTop="15dp"
        android:text="@string/en_curso"
        android:textColor="@color/letras"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/id_btnAlta" />

    <Button
        android:id="@+id/id_btnPausado"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/efecto_boton"
        android:drawableTop="@drawable/pause_octagon"
        android:paddingTop="15dp"
        android:text="@string/pausados"
        android:textColor="@color/letras"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/id_btnAlta"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/id_btnAlta" />

    <Button
        android:id="@+id/id_btnDetalles"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/efecto_boton"
        android:drawableTop="@drawable/book_open"
        android:paddingTop="15dp"
        android:text="@string/detalles"
        android:textColor="@color/letras"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/id_btnEnCurso"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/id_btnEnCurso" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="160dp"
        android:layout_height="250dp"
        android:alpha="0.2"
        android:src="@drawable/magove"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>